--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -26,7 +26,15 @@ apply plugin: 'kotlin-android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
 android {
-    compileSdkVersion flutter.compileSdkVersion
+    compileSdkVersion 31
+
+    android {
+        lintOptions {
+            abortOnError false
+        }
+    }
+
+
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
